gen/cloudscheduler/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-cloudscheduler1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/cloudscheduler/v1/lib)
error[E0423]: expected value, found struct `locations::LocationsActions`
   --> gen/cloudscheduler/v1/lib/src/lib.rs:823:13
    |
823 |             locations::LocationsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `jobs::JobsActions`
   --> gen/cloudscheduler/v1/lib/src/lib.rs:876:17
    |
876 |                 jobs::JobsActions
    |                 ^^^^^^^^^^^^^^^^^ did you mean `jobs::JobsActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-cloudscheduler1`.

To learn more, run the command again with --verbose.
